fix bug for footer not following new style on other html, hire button go to contact and video smaller on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,77 @@ body {
     color: var(--h-2-color);
 }
 
+.paragraph-light {
+    background-color: var(--bg-2-color);
+}
+
+/* Hide default arrows */
+#portfolioCarousel .carousel-control-prev,
+#portfolioCarousel .carousel-control-next {
+  display: none;
+}
+
+/* Left/right click zones */
+#portfolioCarousel .click-zone {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  cursor: pointer;
+  z-index: 5;
+}
+
+#portfolioCarousel .click-zone.left {
+  left: 0;
+  width: 20%;
+  height: 80%;
+}
+
+#portfolioCarousel .click-zone.right {
+  right: 0;
+  width: 20%;
+  height: 80%;
+}
+
+#portfolioCarousel {
+  max-width: 1500px;
+  min-width: 500px;
+  margin: 0 auto;
+}
+
+#portfolioCarousel .carousel-inner img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.carousel-item img {
+  max-height: 600px;
+  object-fit: contain;
+}
+
+@media (min-width: 768px) {
+    .pad-left {
+        padding-left: 2rem;
+    }
+}
+
+@media (max-width: 768px) {
+  .carousel-item video {
+    max-height: 300px !important;
+  }
+}
+.card-img-top {
+    max-height: 400px;
+    width: 100%;
+    object-fit: contain;
+}
+
+.carousel-item video {
+  max-height: 600px;
+  object-fit: contain;
+}
+
 /* testimonial section starts */
 .testimonial {
     background-color: var(--bg-1-color);
@@ -564,71 +635,4 @@ footer .link-group a:hover {
 
 .navbar {
     background-color: var(--nav-bg);
-}
-
-/* portofolio detail */
-.paragraph-light {
-    background-color: var(--bg-2-color);
-}
-
-/* Hide default arrows */
-#portfolioCarousel .carousel-control-prev,
-#portfolioCarousel .carousel-control-next {
-  display: none;
-}
-
-/* Left/right click zones */
-#portfolioCarousel .click-zone {
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 50%;
-  cursor: pointer;
-  z-index: 5;
-}
-
-#portfolioCarousel .click-zone.left {
-  left: 0;
-  width: 20%;
-  height: 80%;
-}
-
-#portfolioCarousel .click-zone.right {
-  right: 0;
-  width: 20%;
-  height: 80%;
-}
-
-#portfolioCarousel {
-  max-width: 1500px;
-  min-width: 500px;
-  margin: 0 auto;
-}
-
-#portfolioCarousel .carousel-inner img {
-  width: 100%;
-  height: auto;
-  object-fit: contain;
-}
-
-.carousel-item img {
-  max-height: 600px;
-  object-fit: contain;
-}
-
-@media (min-width: 768px) {
-    .pad-left {
-        padding-left: 2rem;
-    }
-}
-
-.card-img-top {
-    max-height: 400px;
-    width: 100%;
-    object-fit: contain;
-}
-
-.carousel-item video {
-  max-height: 600px;
-  object-fit: contain;
 }
